# QIE-ECHOAVERIX-

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
apps/echo-contracts/: hardhat.config.ts  package.json
apps/echo-contracts/contracts/: AgentLicenseVault.sol  EchoAccessController.sol  EchoAgentRegistry.sol  EchoMeshRouter.sol  EchoRoyaltySplitter.sol  LegacyAgentTransfer.sol  ReputationAnchor.sol
apps/echo-contracts/scripts/: deploy.ts
apps/echo-contracts/test/: EchoAgentRegistry.test.ts
apps/echo-oracle/: pyproject.toml  requirements.txt
apps/echo-oracle/src/: main.py  openrouterapi.py
apps/echo-oracle/src/agents/: benchmark_agent.py  creator_profile_agent.py  knowledge_rag_agent.py  mesh_orchestrator_agent.py  monetization_agent.py  safety_review_agent.py  version_analyst_agent.py
apps/echo-oracle/src/core/: __init__.py  config.py  database.py  echoaverix.db  models.py
apps/echo-oracle/src/mesh/: __init__.py  attribution.py  router.py  synthesizer.py
apps/echo-oracle/src/routers/: agents.py  analytics.py  echoscore.py  exchange.py  knowledge.py  licensing.py  mesh.py
apps/echo-oracle/src/scoring/: composite.py  dimensions.py  history.py
apps/echo-web/: README.md  next.config.mjs  package.json  tailwind.config.ts
apps/echo-web/src/app/: globals.css  layout.tsx  page.tsx
apps/echo-web/src/components/: MorphButton.tsx  ParticleBackground.tsx
docs/: backend-deployment-fix.md  deployment-blocker-analysis.md  final-deploy-verification.md  frontend-import-fix.md  naming-refactor.md  originalization-report.md  source-audit.md
(+18 files in other folders)
