[tool.poetry]
name = "echo-oracle"
version = "1.0.0"
description = "QIE EchoAverix AI Oracle & Multi-Agent Collaboration Engine"
authors = ["QIE EchoAverix Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
openai = "^1.9.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
